Update and rename ru_CA.po to ru-RU.po
Signed-off-by: Timofey Smolin <57951811+smotim@users.noreply.github.com>

--- a/po/ru-RU.po
+++ b/po/ru-RU.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Language: ru_CA\n"
+"Language: ru-RU\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
