:children_crossing: Added a tooltip in About

--- a/po/fr_CA.po
+++ b/po/fr_CA.po
@@ -117,3 +117,6 @@ msgstr "Installer l'outil sélectionné"
 
 msgid "Launcher information"
 msgstr "Informations du launcher"
+
+msgid "Copy"
+msgstr "Copier"
