:globe_with_meridians: Add missing translation

--- a/po/fr_CA.po
+++ b/po/fr_CA.po
@@ -120,3 +120,6 @@ msgstr "Informations du launcher"
 
 msgid "Copy"
 msgstr "Copier"
+
+msgid "Remember last launcher"
+msgstr "Se souvenir du dernier launcher"
