--- a/po/it.po
+++ b/po/it.po
@@ -1,25 +1,14 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the com.vysp3r.ProtonPlus package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-#
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-15 21:22-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
-"MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"POT-Creation-Date: 2023-01-15 21:18-0500\n"
+"Language: it_IT\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: src/Windows/About.vala:6 src/Windows/Home.vala:26
 msgid "About"
-msgstr ""
+msgstr "Informazioni"
 
 #: src/Windows/About.vala:23 src/Windows/About.vala:38
 msgid "Copy"
@@ -28,87 +17,87 @@ msgstr ""
 #. Setup rowTool
 #: src/Windows/About.vala:28
 msgid "Name: "
-msgstr ""
+msgstr "Nome: "
 
 #. Setup rowDirectory
 #: src/Windows/About.vala:43
 msgid "Directory: "
-msgstr ""
+msgstr "Directory: "
 
 #. Setup menu_model_about
 #: src/Windows/Home.vala:23
 msgid "Telegram"
-msgstr ""
+msgstr "Telegram"
 
 #: src/Windows/Home.vala:24
 msgid "Documentation"
-msgstr ""
+msgstr "Documentazione"
 
 #: src/Windows/Home.vala:25
 msgid "Donation"
-msgstr ""
+msgstr "Donazione"
 
 #. Setup menu_model_quit
 #: src/Windows/Home.vala:30
 msgid "Quit"
-msgstr ""
+msgstr "Esci"
 
 #. Setup menu_model
 #: src/Windows/Home.vala:34 src/Windows/Preferences.vala:13
 msgid "Preferences"
-msgstr ""
+msgstr "Preferenze"
 
 #. Setup toolsPage
 #: src/Windows/Home.vala:47
 msgid "Tools"
-msgstr ""
+msgstr "Strumenti"
 
 #. Setup gamesPage
 #: src/Windows/Home.vala:51
 msgid "Games"
-msgstr ""
+msgstr "Giochi"
 
 #. Setup notificationsPage
 #: src/Windows/Home.vala:55
 msgid "Notifications"
-msgstr ""
+msgstr "Notifiche"
 
 #: src/Windows/Installer.vala:21 src/Windows/Installer.vala:31
 msgid "Install"
-msgstr ""
+msgstr "Installa"
 
 #. Initialize shared widgets
 #: src/Windows/Installer.vala:28
 msgid "Compatibility Tool"
-msgstr ""
+msgstr "Strumento di compatibilità"
 
 #: src/Windows/Installer.vala:29
 msgid "Version"
-msgstr ""
+msgstr "Versione"
 
 #: src/Windows/Installer.vala:30
 msgid "Info"
-msgstr ""
+msgstr "Info"
 
 #: src/Windows/Installer.vala:69
 msgid "Open a browser to the tool page"
-msgstr ""
+msgstr "Aprire un browser alla pagina dello strumento"
 
 #: src/Windows/Installer.vala:77
 msgid "Install the selected tool"
-msgstr ""
+msgstr "Installa lo strumento selezionato"
 
 #: src/Windows/Installer.vala:94
 msgid "Downloading..."
-msgstr ""
+msgstr "Scaricamento in corso..."
 
 #: src/Windows/Installer.vala:118
 msgid "Extracting..."
-msgstr ""
+msgstr "Estrazione in corso..."
 
 #: src/Windows/Installer.vala:145
 msgid "Done!"
-msgstr ""
+msgstr "Fatto!"
 
 #: src/Windows/Installer.vala:165
 msgid "Cancelled!"
@@ -120,19 +109,23 @@ msgid ""
 "reached the maximum amount of requests per hour or may not be connected to "
 "the internet. If you think this is a bug, please report this to us."
 msgstr ""
+"Si è verificato un errore durante il recupero dei dati dall'API GitHub. "
+"Potresti aver raggiunto il numero massimo di richieste all'ora o potresti "
+"non essere connesso a Internet. Se ritieni che si tratti di un bug, "
+"segnalalo."
 
 #: src/Windows/LauncherSettings.vala:9
 msgid "Launcher Settings"
-msgstr ""
+msgstr "Impostazioni del lanciatore"
 
 #. Setup btnClean
 #: src/Windows/LauncherSettings.vala:24
 msgid "Clean launcher"
-msgstr ""
+msgstr "Pulisci lanciatore"
 
 #: src/Windows/LauncherSettings.vala:25
 msgid "Delete every installed tools from the launcher"
-msgstr ""
+msgstr "Elimina tutti gli strumenti installati dal lanciatore"
 
 #. Events
 #: src/Windows/LauncherSettings.vala:35
@@ -140,11 +133,13 @@ msgid ""
 "Are you sure you want to clean this launcher? WARNING: It will delete every "
 "installed tools from the launcher!"
 msgstr ""
+"Sei sicuro di voler pulire questo lanciatore? ATTENZIONE: eliminerà tutti "
+"gli strumenti installati nel lanciatore!"
 
 #. Initialize shared widgets
 #: src/Windows/Preferences.vala:22
 msgid "Styles"
-msgstr ""
+msgstr "Stili"
 
 #. Setup mainPage
 #: src/Windows/Preferences.vala:27 src/Windows/Preferences.vala:28
@@ -153,35 +148,42 @@ msgstr ""
 
 #. Setup rememberLastLauncherRow
 #: src/Windows/Preferences.vala:51
+#, fuzzy
 msgid "Remember last launcher"
-msgstr ""
+msgstr "Pulisci lanciatore"
 
-#. Initialize shared values
-#. Initialize shared widgets
-#: src/Windows/Views/Tools.vala:25
-msgid "Launcher"
-msgstr ""
+#~ msgid "Launcher"
+#~ msgstr "Lanciatore"
 
-#: src/Windows/Views/Tools.vala:50
-msgid "Launcher information"
-msgstr ""
+#~ msgid "Launcher settings"
+#~ msgstr "Impostazioni del lanciatore"
 
-#: src/Windows/Views/Tools.vala:58
-msgid "Launcher settings"
-msgstr ""
+#~ msgid "Install a tool"
+#~ msgstr "Installa uno strumento"
 
-#: src/Windows/Views/Tools.vala:66
-msgid "Install a tool"
-msgstr ""
+#~ msgid "Are you sure you want to delete the selected tool?"
+#~ msgstr "Sei sicuro di voler eliminare lo strumento selezionato?"
 
-#: src/Windows/Views/Tools.vala:121
-msgid "Show information"
-msgstr ""
+#~ msgid "Close"
+#~ msgstr "Chiudi"
 
-#: src/Windows/Views/Tools.vala:129
-msgid "Delete the tool"
-msgstr ""
+#~ msgid "Appearance"
+#~ msgstr "Aspetto"
 
-#: src/Windows/Views/Tools.vala:172
-msgid "Are you sure you want to delete the selected tool?"
-msgstr ""
+#~ msgid "System"
+#~ msgstr "Sistema"
+
+#~ msgid "Light"
+#~ msgstr "Chiaro"
+
+#~ msgid "Dark"
+#~ msgstr "Scuro"
+
+#~ msgid "Show information"
+#~ msgstr "Mostra informazioni"
+
+#~ msgid "Delete the tool"
+#~ msgstr "Elimina lo strumento"
+
+#~ msgid "Launcher information"
+#~ msgstr "Informazione del lanciatore"
