--- a/po/zh.po
+++ b/po/zh.po
@@ -1,25 +1,23 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the com.vysp3r.ProtonPlus package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
+# neovali <valigarmanda55@gmail.com>, 2023.
+#
 msgid ""
 msgstr ""
-"Project-Id-Version: com.vysp3r.ProtonPlus\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-15 21:22-0500\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"POT-Creation-Date: 2023-01-15 21:18-0500\n"
+"PO-Revision-Date: 2023-01-11 22:36+0800\n"
+"Last-Translator: neovali <valigarmanda55@gmail.com>\n"
+"Language-Team: Chinese - China\n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Gtranslator 42.0\n"
 
 #: src/Windows/About.vala:6 src/Windows/Home.vala:26
 msgid "About"
-msgstr ""
+msgstr "关于"
 
 #: src/Windows/About.vala:23 src/Windows/About.vala:38
 msgid "Copy"
@@ -28,87 +26,87 @@ msgstr ""
 #. Setup rowTool
 #: src/Windows/About.vala:28
 msgid "Name: "
-msgstr ""
+msgstr "名称： "
 
 #. Setup rowDirectory
 #: src/Windows/About.vala:43
 msgid "Directory: "
-msgstr ""
+msgstr "目录： "
 
 #. Setup menu_model_about
 #: src/Windows/Home.vala:23
 msgid "Telegram"
-msgstr ""
+msgstr "Telegram"
 
 #: src/Windows/Home.vala:24
 msgid "Documentation"
-msgstr ""
+msgstr "文档"
 
 #: src/Windows/Home.vala:25
 msgid "Donation"
-msgstr ""
+msgstr "捐赠"
 
 #. Setup menu_model_quit
 #: src/Windows/Home.vala:30
 msgid "Quit"
-msgstr ""
+msgstr "退出"
 
 #. Setup menu_model
 #: src/Windows/Home.vala:34 src/Windows/Preferences.vala:13
 msgid "Preferences"
-msgstr ""
+msgstr "首选项"
 
 #. Setup toolsPage
 #: src/Windows/Home.vala:47
 msgid "Tools"
-msgstr ""
+msgstr "工具"
 
 #. Setup gamesPage
 #: src/Windows/Home.vala:51
 msgid "Games"
-msgstr ""
+msgstr "游戏"
 
 #. Setup notificationsPage
 #: src/Windows/Home.vala:55
 msgid "Notifications"
-msgstr ""
+msgstr "通知"
 
 #: src/Windows/Installer.vala:21 src/Windows/Installer.vala:31
 msgid "Install"
-msgstr ""
+msgstr "安装"
 
 #. Initialize shared widgets
 #: src/Windows/Installer.vala:28
 msgid "Compatibility Tool"
-msgstr ""
+msgstr "兼容性工具"
 
 #: src/Windows/Installer.vala:29
 msgid "Version"
-msgstr ""
+msgstr "版本"
 
 #: src/Windows/Installer.vala:30
 msgid "Info"
-msgstr ""
+msgstr "关于"
 
 #: src/Windows/Installer.vala:69
 msgid "Open a browser to the tool page"
-msgstr ""
+msgstr "用浏览器打开工具页面"
 
 #: src/Windows/Installer.vala:77
 msgid "Install the selected tool"
-msgstr ""
+msgstr "安装选中工具"
 
 #: src/Windows/Installer.vala:94
 msgid "Downloading..."
-msgstr ""
+msgstr "下载中..."
 
 #: src/Windows/Installer.vala:118
 msgid "Extracting..."
-msgstr ""
+msgstr "解压中..."
 
 #: src/Windows/Installer.vala:145
 msgid "Done!"
-msgstr ""
+msgstr "完成！"
 
 #: src/Windows/Installer.vala:165
 msgid "Cancelled!"
@@ -120,31 +118,33 @@ msgid ""
 "reached the maximum amount of requests per hour or may not be connected to "
 "the internet. If you think this is a bug, please report this to us."
 msgstr ""
+"从GitHub API获取数据时出错。您可能已达到每小时请求的最大数量，或者可能未连接"
+"到互联网。如果您认为这是一个错误，请向我们报告。"
 
 #: src/Windows/LauncherSettings.vala:9
 msgid "Launcher Settings"
-msgstr ""
+msgstr "启动器选项"
 
 #. Setup btnClean
 #: src/Windows/LauncherSettings.vala:24
 msgid "Clean launcher"
-msgstr ""
+msgstr "清除启动器"
 
 #: src/Windows/LauncherSettings.vala:25
 msgid "Delete every installed tools from the launcher"
-msgstr ""
+msgstr "删除该启动器下所有工具"
 
 #. Events
 #: src/Windows/LauncherSettings.vala:35
 msgid ""
 "Are you sure you want to clean this launcher? WARNING: It will delete every "
 "installed tools from the launcher!"
-msgstr ""
+msgstr "是否清理该启动器？ 警告：这会删除该启动器下所有工具！"
 
 #. Initialize shared widgets
 #: src/Windows/Preferences.vala:22
 msgid "Styles"
-msgstr ""
+msgstr "风格"
 
 #. Setup mainPage
 #: src/Windows/Preferences.vala:27 src/Windows/Preferences.vala:28
@@ -153,35 +153,42 @@ msgstr ""
 
 #. Setup rememberLastLauncherRow
 #: src/Windows/Preferences.vala:51
+#, fuzzy
 msgid "Remember last launcher"
-msgstr ""
+msgstr "清除启动器"
 
-#. Initialize shared values
-#. Initialize shared widgets
-#: src/Windows/Views/Tools.vala:25
-msgid "Launcher"
-msgstr ""
+#~ msgid "Launcher"
+#~ msgstr "启动器"
 
-#: src/Windows/Views/Tools.vala:50
-msgid "Launcher information"
-msgstr ""
+#~ msgid "Launcher settings"
+#~ msgstr "启动器选项"
 
-#: src/Windows/Views/Tools.vala:58
-msgid "Launcher settings"
-msgstr ""
+#~ msgid "Install a tool"
+#~ msgstr "安装工具"
 
-#: src/Windows/Views/Tools.vala:66
-msgid "Install a tool"
-msgstr ""
+#~ msgid "Are you sure you want to delete the selected tool?"
+#~ msgstr "是否删除所选工具？"
 
-#: src/Windows/Views/Tools.vala:121
-msgid "Show information"
-msgstr ""
+#~ msgid "Close"
+#~ msgstr "关闭"
 
-#: src/Windows/Views/Tools.vala:129
-msgid "Delete the tool"
-msgstr ""
+#~ msgid "Appearance"
+#~ msgstr "外观"
 
-#: src/Windows/Views/Tools.vala:172
-msgid "Are you sure you want to delete the selected tool?"
-msgstr ""
+#~ msgid "System"
+#~ msgstr "系统"
+
+#~ msgid "Light"
+#~ msgstr "明亮"
+
+#~ msgid "Dark"
+#~ msgstr "暗色"
+
+#~ msgid "Show information"
+#~ msgstr "显示信息"
+
+#~ msgid "Delete the tool"
+#~ msgstr "删除工具"
+
+#~ msgid "Launcher information"
+#~ msgstr "启动器信息"
