--- a/po/es.po
+++ b/po/es.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-15 21:18-0500\n"
+"POT-Creation-Date: 2023-01-20 09:39-0500\n"
 "Language: es_ES\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -152,38 +152,44 @@ msgstr ""
 msgid "Remember last launcher"
 msgstr "Limpiar lanzador"
 
-#~ msgid "Launcher"
-#~ msgstr "Lanzador"
+#. Initialize shared values
+#. Initialize shared widgets
+#: src/Windows/Views/Tools.vala:25
+msgid "Launcher"
+msgstr "Lanzador"
 
-#~ msgid "Launcher settings"
-#~ msgstr "Configuracion del lanzador"
+#: src/Windows/Views/Tools.vala:50
+msgid "Launcher information"
+msgstr "Información del lanzador"
 
-#~ msgid "Install a tool"
-#~ msgstr "Instalar una herramienta"
+#: src/Windows/Views/Tools.vala:58
+msgid "Launcher settings"
+msgstr "Configuracion del lanzador"
 
-#~ msgid "Are you sure you want to delete the selected tool?"
-#~ msgstr "¿Estás seguro de eliminar esta herramienta?"
+#: src/Windows/Views/Tools.vala:66
+msgid "Install a tool"
+msgstr "Instalar una herramienta"
 
-#~ msgid "Close"
-#~ msgstr "Cerrar"
+#: src/Windows/Views/Tools.vala:121
+msgid "Show information"
+msgstr "Mostrar información"
 
-#~ msgid "Appearance"
-#~ msgstr "Apariencia"
+#: src/Windows/Views/Tools.vala:129
+msgid "Delete the tool"
+msgstr "Eliminar herramienta"
 
-#~ msgid "System"
-#~ msgstr "Sistema"
+#: src/Windows/Views/Tools.vala:172
+msgid "Are you sure you want to delete the selected tool?"
+msgstr "¿Estás seguro de eliminar esta herramienta?"
 
-#~ msgid "Light"
-#~ msgstr "Claro"
+#: src/Models/preferences/Style.vala:39
+msgid "System"
+msgstr "Sistema"
 
-#~ msgid "Dark"
-#~ msgstr "Oscuro"
+#: src/Models/preferences/Style.vala:40
+msgid "Light"
+msgstr "Claro"
 
-#~ msgid "Show information"
-#~ msgstr "Mostrar información"
-
-#~ msgid "Delete the tool"
-#~ msgstr "Eliminar herramienta"
-
-#~ msgid "Launcher information"
-#~ msgstr "Información del lanzador"
+#: src/Models/preferences/Style.vala:41
+msgid "Dark"
+msgstr "Oscuro"
