--- a/po/fr.po
+++ b/po/fr.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-15 21:18-0500\n"
+"POT-Creation-Date: 2023-01-20 09:39-0500\n"
 "Language: fr_CA\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -151,38 +151,44 @@ msgstr ""
 msgid "Remember last launcher"
 msgstr "Se souvenir du dernier launcher"
 
-#~ msgid "Launcher"
-#~ msgstr "Launcher"
+#. Initialize shared values
+#. Initialize shared widgets
+#: src/Windows/Views/Tools.vala:25
+msgid "Launcher"
+msgstr "Launcher"
 
-#~ msgid "Launcher settings"
-#~ msgstr "Paramètres du launcher"
+#: src/Windows/Views/Tools.vala:50
+msgid "Launcher information"
+msgstr "Informations du launcher"
 
-#~ msgid "Install a tool"
-#~ msgstr "Installer un outil"
+#: src/Windows/Views/Tools.vala:58
+msgid "Launcher settings"
+msgstr "Paramètres du launcher"
 
-#~ msgid "Are you sure you want to delete the selected tool?"
-#~ msgstr "Êtes vous sure de vouloir supprimer l'outil selectionné?"
+#: src/Windows/Views/Tools.vala:66
+msgid "Install a tool"
+msgstr "Installer un outil"
 
-#~ msgid "Close"
-#~ msgstr "Fermer"
+#: src/Windows/Views/Tools.vala:121
+msgid "Show information"
+msgstr "Afficher informations"
 
-#~ msgid "Appearance"
-#~ msgstr "Apparence"
+#: src/Windows/Views/Tools.vala:129
+msgid "Delete the tool"
+msgstr "Supprimer l'outil"
 
-#~ msgid "System"
-#~ msgstr "Système"
+#: src/Windows/Views/Tools.vala:172
+msgid "Are you sure you want to delete the selected tool?"
+msgstr "Êtes vous sure de vouloir supprimer l'outil selectionné?"
 
-#~ msgid "Light"
-#~ msgstr "Clair"
+#: src/Models/preferences/Style.vala:39
+msgid "System"
+msgstr "Système"
 
-#~ msgid "Dark"
-#~ msgstr "Sombre"
+#: src/Models/preferences/Style.vala:40
+msgid "Light"
+msgstr "Clair"
 
-#~ msgid "Show information"
-#~ msgstr "Afficher informations"
-
-#~ msgid "Delete the tool"
-#~ msgstr "Supprimer l'outil"
-
-#~ msgid "Launcher information"
-#~ msgstr "Informations du launcher"
+#: src/Models/preferences/Style.vala:41
+msgid "Dark"
+msgstr "Sombre"
