--- a/po/it.po
+++ b/po/it.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-01-15 21:18-0500\n"
+"POT-Creation-Date: 2023-01-20 09:39-0500\n"
 "Language: it_IT\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -152,38 +152,44 @@ msgstr ""
 msgid "Remember last launcher"
 msgstr "Pulisci lanciatore"
 
-#~ msgid "Launcher"
-#~ msgstr "Lanciatore"
+#. Initialize shared values
+#. Initialize shared widgets
+#: src/Windows/Views/Tools.vala:25
+msgid "Launcher"
+msgstr "Lanciatore"
 
-#~ msgid "Launcher settings"
-#~ msgstr "Impostazioni del lanciatore"
+#: src/Windows/Views/Tools.vala:50
+msgid "Launcher information"
+msgstr "Informazione del lanciatore"
 
-#~ msgid "Install a tool"
-#~ msgstr "Installa uno strumento"
+#: src/Windows/Views/Tools.vala:58
+msgid "Launcher settings"
+msgstr "Impostazioni del lanciatore"
 
-#~ msgid "Are you sure you want to delete the selected tool?"
-#~ msgstr "Sei sicuro di voler eliminare lo strumento selezionato?"
+#: src/Windows/Views/Tools.vala:66
+msgid "Install a tool"
+msgstr "Installa uno strumento"
 
-#~ msgid "Close"
-#~ msgstr "Chiudi"
+#: src/Windows/Views/Tools.vala:121
+msgid "Show information"
+msgstr "Mostra informazioni"
 
-#~ msgid "Appearance"
-#~ msgstr "Aspetto"
+#: src/Windows/Views/Tools.vala:129
+msgid "Delete the tool"
+msgstr "Elimina lo strumento"
 
-#~ msgid "System"
-#~ msgstr "Sistema"
+#: src/Windows/Views/Tools.vala:172
+msgid "Are you sure you want to delete the selected tool?"
+msgstr "Sei sicuro di voler eliminare lo strumento selezionato?"
 
-#~ msgid "Light"
-#~ msgstr "Chiaro"
+#: src/Models/preferences/Style.vala:39
+msgid "System"
+msgstr "Sistema"
 
-#~ msgid "Dark"
-#~ msgstr "Scuro"
+#: src/Models/preferences/Style.vala:40
+msgid "Light"
+msgstr "Chiaro"
 
-#~ msgid "Show information"
-#~ msgstr "Mostra informazioni"
-
-#~ msgid "Delete the tool"
-#~ msgstr "Elimina lo strumento"
-
-#~ msgid "Launcher information"
-#~ msgstr "Informazione del lanciatore"
+#: src/Models/preferences/Style.vala:41
+msgid "Dark"
+msgstr "Scuro"
