--- a/po/ru.po
+++ b/po/ru.po
@@ -191,7 +191,7 @@ msgid ""
 msgstr ""
 "Если вы используете gamescope в Steam (Flatpak), эти инструменты не будут работать. "
 "Необходимо использовать совеместимый билд от сообщества. Чтобы отключить это предупреждение "
-"нажмите "да". Или выберите "нет", чтобы сохранить его."
+"нажмите 'да'. Или выберите 'нет', чтобы сохранить его."
 
 #: src/Windows/Views/Tools.vala:196
 msgid "Are you sure you want to delete the selected tool?"
