:bug: Fix Steam install  message
The message that showed up at the end of each install asking to restart Steam if it was open will now only being displayed for Steam instead of every launcher. I updated the translation files at the same time.

--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-04 20:59-0400\n"
+"POT-Creation-Date: 2023-04-05 11:24-0400\n"
 "PO-Revision-Date: \n"
 "Last-Translator: yukidream <mashirokuratamorfo@gmail.com>\n"
 "Language-Team: \n"
@@ -152,12 +152,6 @@ msgstr ""
 msgid "Extraction done...\n"
 msgstr "Mengekstrak..."
 
-#: src/Windows/Tools/ReleaseInstaller.vala:171
-msgid ""
-"Make sure to restart Steam if it's open to be able to use it in Steam "
-"otherwise you will not see it.\n"
-msgstr ""
-
 #: src/Windows/Tools/ReleaseInstaller.vala:172
 msgid "You cannot cancel the operation when it's already completed."
 msgstr ""
@@ -189,6 +183,31 @@ msgid ""
 "- You may have reached the GitHub API limit\n"
 "- You may be disconnected from the internet"
 msgstr ""
+
+#. Steam
+#: src/Models/Launcher.vala:64
+msgid ""
+"Make sure to restart Steam if it's open to be able to use it otherwise you "
+"will not see it.\n"
+msgstr ""
+
+#: src/Models/Launcher.vala:91
+msgid ""
+"If you're using gamescope with Steam (Flatpak), those tools will not work. "
+"Make sure to use the community builds from Flathub."
+msgstr ""
+
+#: src/Models/Preferences/Style.vala:17
+msgid "System"
+msgstr "Sistem"
+
+#: src/Models/Preferences/Style.vala:18
+msgid "Light"
+msgstr "Terang"
+
+#: src/Models/Preferences/Style.vala:19
+msgid "Dark"
+msgstr "Gelap"
 
 #~ msgid "Delete the tool"
 #~ msgstr "Menghapus alat"
@@ -258,12 +277,3 @@ msgstr ""
 
 #~ msgid "Are you sure you want to delete the selected tool?"
 #~ msgstr "Apakah kamu yakin ingin menghapus alat ini?"
-
-#~ msgid "System"
-#~ msgstr "Sistem"
-
-#~ msgid "Light"
-#~ msgstr "Terang"
-
-#~ msgid "Dark"
-#~ msgstr "Gelap"
