--- a/po/fr.po
+++ b/po/fr.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-04-04 20:59-0400\n"
+"POT-Creation-Date: 2023-04-05 11:24-0400\n"
 "Language: fr_CA\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -146,12 +146,6 @@ msgstr ""
 msgid "Extraction done...\n"
 msgstr "En extraction..."
 
-#: src/Windows/Tools/ReleaseInstaller.vala:171
-msgid ""
-"Make sure to restart Steam if it's open to be able to use it in Steam "
-"otherwise you will not see it.\n"
-msgstr ""
-
 #: src/Windows/Tools/ReleaseInstaller.vala:172
 msgid "You cannot cancel the operation when it's already completed."
 msgstr ""
@@ -183,6 +177,31 @@ msgid ""
 "- You may have reached the GitHub API limit\n"
 "- You may be disconnected from the internet"
 msgstr ""
+
+#. Steam
+#: src/Models/Launcher.vala:64
+msgid ""
+"Make sure to restart Steam if it's open to be able to use it otherwise you "
+"will not see it.\n"
+msgstr ""
+
+#: src/Models/Launcher.vala:91
+msgid ""
+"If you're using gamescope with Steam (Flatpak), those tools will not work. "
+"Make sure to use the community builds from Flathub."
+msgstr ""
+
+#: src/Models/Preferences/Style.vala:17
+msgid "System"
+msgstr "Système"
+
+#: src/Models/Preferences/Style.vala:18
+msgid "Light"
+msgstr "Clair"
+
+#: src/Models/Preferences/Style.vala:19
+msgid "Dark"
+msgstr "Sombre"
 
 #~ msgid "Delete the tool"
 #~ msgstr "Supprimer l'outil"
@@ -252,12 +271,3 @@ msgstr ""
 
 #~ msgid "Are you sure you want to delete the selected tool?"
 #~ msgstr "Êtes vous sure de vouloir supprimer l'outil selectionné?"
-
-#~ msgid "System"
-#~ msgstr "Système"
-
-#~ msgid "Light"
-#~ msgstr "Clair"
-
-#~ msgid "Dark"
-#~ msgstr "Sombre"
