Update  german translation

--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-06-05 22:19-0400\n"
-"PO-Revision-Date: 2023-04-18 19:24+0200\n"
+"PO-Revision-Date: 2023-06-08 08:32+0200\n"
 "Last-Translator: Christian Lauinger <christian@lauinger-clan.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -20,38 +20,35 @@ msgstr ""
 
 #: src/launcher/launcher-warning-box.vala:21
 msgid "Welcome to "
-msgstr ""
+msgstr "Willkommen zu "
 
 #: src/launcher/launcher-warning-box.vala:22
 msgid "Install Steam, Lutris, Bottles or Heroic Games Launcher to get started."
-msgstr ""
+msgstr "Installieren Sie Steam, Lutris, Bottles oder Heroic Games Launcher, um loszulegen."
 
 #: src/launcher/launcher-info-box.vala:105
-#, fuzzy
 msgid "There was an error while fetching data from the GitHub API"
-msgstr "Es gab einen Fehler während entpackt wurde..."
+msgstr "Beim Abrufen von Daten von der GitHub-API ist ein Fehler aufgetreten"
 
 #: src/launcher/launcher-info-box.vala:128
-#, fuzzy
 msgid "Deleted "
-msgstr "Löschen"
+msgstr "Gelöscht "
 
 #: src/launcher/launcher-info-box.vala:130
 msgid "Undo"
-msgstr ""
+msgstr "Rückgängig"
 
 #: src/launcher/launcher-info-box.vala:171
-#, fuzzy
 msgid "Cancel the installation"
-msgstr "Breche Installation ab..."
+msgstr "Breche Installation ab"
 
 #: src/launcher/launcher-info-box.vala:235
 msgid "Delete the runner"
-msgstr ""
+msgstr "Löschen des Ausführungswerkzeugs"
 
 #: src/launcher/launcher-info-box.vala:248
 msgid "Install the runner"
-msgstr ""
+msgstr "Installieren des Ausführungswerkzeugs"
 
 #.
 #. menu_model.append (_("Preferences"), "app.preferences"); // TODO
@@ -69,21 +66,17 @@ msgstr "Einstellungen"
 #: src/preferences/preferences-window.vala:21
 #: src/preferences/preferences-window.vala:22
 msgid "Main"
-msgstr "Hauptsächlich"
+msgstr "Allgemein"
 
 #, fuzzy
 #~ msgid "A simple Wine and Proton-based compatibility tools manager for GNOME"
-#~ msgstr ""
-#~ "Ein einfacher Wine und Proton-basierter Kompatibilitätswerkzeugmanager "
-#~ "für GNOME"
+#~ msgstr "Ein einfacher Wine und Proton-basierter Kompatibilitätswerkzeugmanager für GNOME"
 
 #~ msgid "Special thanks to"
 #~ msgstr "Spezieller Dank an"
 
 #~ msgid "You cannot close the window while a tool is installing"
-#~ msgstr ""
-#~ "Sie können das Fenster nicht schliessen während ein Werkzeug installiert "
-#~ "wird"
+#~ msgstr "Sie können das Fenster nicht schliessen während ein Werkzeug installiert wird"
 
 #~ msgid "Telegram"
 #~ msgstr "Telegramm"
@@ -143,9 +136,7 @@ msgstr "Hauptsächlich"
 #~ msgstr "Zurück gehen"
 
 #~ msgid "You cannot cancel the operation for tools using Github Actions."
-#~ msgstr ""
-#~ "Sie können die Operation für Werkzeuge die Github-Aktionen verwenden "
-#~ "nicht abbrechen."
+#~ msgstr "Sie können die Operation für Werkzeuge die Github-Aktionen verwenden nicht abbrechen."
 
 #~ msgid "Download started...\n"
 #~ msgstr "Download gestartet...\n"
@@ -187,20 +178,11 @@ msgstr "Hauptsächlich"
 #~ "- Sie könnten das Gitgub API Limit erreicht haben\n"
 #~ "- Sie könnten vom Internet getrennt sein"
 
-#~ msgid ""
-#~ "Make sure to restart Steam if it's open to be able to use it otherwise "
-#~ "you will not see it.\n"
-#~ msgstr ""
-#~ "Stellen Sie sicher das Steam neu gestartet wurde wenn es geöffnet ist um "
-#~ "es benutzen zu können oder Sie werden es nicht sehen können.\n"
+#~ msgid "Make sure to restart Steam if it's open to be able to use it otherwise you will not see it.\n"
+#~ msgstr "Stellen Sie sicher das Steam neu gestartet wurde wenn es geöffnet ist um es benutzen zu können oder Sie werden es nicht sehen können.\n"
 
-#~ msgid ""
-#~ "If you're using gamescope with Steam (Flatpak), those tools will not "
-#~ "work. Make sure to use the community builds from Flathub."
-#~ msgstr ""
-#~ "Wenn Sie gamescope mit Steam (Faltpak) verwenden, werden diese Werkzeuge "
-#~ "nicht funktionieren. Stellen Sie sicher das Sie die Community builds von "
-#~ "Flathub verwenden."
+#~ msgid "If you're using gamescope with Steam (Flatpak), those tools will not work. Make sure to use the community builds from Flathub."
+#~ msgstr "Wenn Sie gamescope mit Steam (Faltpak) verwenden, werden diese Werkzeuge nicht funktionieren. Stellen Sie sicher das Sie die Community builds von Flathub verwenden."
 
 #~ msgid "System"
 #~ msgstr "System"
