--- a/po/de.po
+++ b/po/de.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: com.vysp3r.ProtonPlus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2023-07-30 13:47-0400\n"
-"PO-Revision-Date: 2023-06-08 08:32+0200\n"
+"PO-Revision-Date: 2023-07-31 18:35+0200\n"
 "Last-Translator: Christian Lauinger <christian@lauinger-clan.de>\n"
 "Language-Team: \n"
 "Language: de\n"
@@ -31,7 +31,7 @@ msgstr ""
 #: src/launcher/launcher-info-box.vala:122
 #: src/launcher/launcher-info-box.vala:131
 msgid "Load more"
-msgstr ""
+msgstr "Mehr laden"
 
 #: src/launcher/launcher-info-box.vala:146
 msgid "There was an error while fetching data from the GitHub API"
@@ -39,11 +39,11 @@ msgstr "Beim Abrufen von Daten von der GitHub-API ist ein Fehler aufgetreten"
 
 #: src/launcher/launcher-info-box.vala:162
 msgid "Are you sure you want to delete "
-msgstr ""
+msgstr "Sind Sie sicher das Sie es löschen wollen "
 
 #: src/launcher/launcher-info-box.vala:164
 msgid "Confirm"
-msgstr ""
+msgstr "Bestätigen"
 
 #: src/launcher/launcher-info-box.vala:201
 msgid "Cancel the installation"
