--- a/po/it.po
+++ b/po/it.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-08-26 13:47-0400\n"
+"POT-Creation-Date: 2023-08-27 11:56-0400\n"
 "Language: it_IT\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -57,6 +57,11 @@ msgstr "Informazioni"
 msgid "Runners"
 msgstr ""
 
+#: src/shared/launchers/bottles.vala:7
+#, fuzzy
+msgid "Compatibility tool to run Windows games on Linux"
+msgstr "Strumento di compatibilità Steam per l'esecuzione di giochi Windows"
+
 #: src/shared/launchers/bottles.vala:11 src/shared/launchers/hgl.vala:15
 #: src/shared/launchers/lutris.vala:11
 msgid "Vulkan based implementation of Direct3D 9, 10 and 11 for Linux/Wine"
@@ -70,15 +75,16 @@ msgstr "Contiene miglioramenti rispetto al Proton predefinito di Valve."
 msgid ""
 " Based on Valve Proton Experimental's bleeding-edge Wine, built for Lutris."
 msgstr ""
-Contiene miglioramenti rispetto al Proton predefinito di Valve." Basato sull'innovativo Wine di Valve Proton Experimental, creato per Lutris."
+"Contiene miglioramenti rispetto al Proton predefinito di Valve. Basato "
+"sull'innovativo Wine di Valve Proton Experimental, creato per Lutris."
 
 #: src/shared/launchers/bottles.vala:58 src/shared/launchers/lutris.vala:58
 msgid ""
 "Improved by Lutris to offer better compatibility or performance in certain "
 "games."
 msgstr ""
-"Migliorato da Lutris per offrire migliore compatibilità o prestazioni in alcuni "
-"giochi."
+"Migliorato da Lutris per offrire migliore compatibilità o prestazioni in "
+"alcuni giochi."
 
 #: src/shared/launchers/hgl.vala:7
 msgid "Steam compatibility tool for running Windows games"
@@ -86,21 +92,23 @@ msgstr "Strumento di compatibilità Steam per l'esecuzione di giochi Windows"
 
 #: src/shared/launchers/hgl.vala:11
 msgid "Wine is a program which allows running Microsoft Windows programs"
-msgstr "Wine è un programma che consente di eseguire programmi Microsoft Windows"
+msgstr ""
+"Wine è un programma che consente di eseguire programmi Microsoft Windows"
 
 #: src/shared/launchers/hgl.vala:19 src/shared/launchers/lutris.vala:15
 msgid ""
 "Fork of Wine's VKD3D which aims to implement the full Direct3D 12 API on top "
 "of Vulkan"
 msgstr ""
-"VKD3D di Fork of Wine che mira a implementare l'intera API Direct3D 12 "
-"di Vulkan"
+"VKD3D di Fork of Wine che mira a implementare l'intera API Direct3D 12 di "
+"Vulkan"
 
 #: src/shared/launchers/hgl.vala:62 src/shared/launchers/lutris.vala:54
 msgid ""
 "Based on Valve Proton Experimental's bleeding-edge Wine, built for Lutris."
 msgstr ""
-"Basato su wine all'avanguardia di Valve Proton Experimental, costruito per Lutris."
+"Basato su wine all'avanguardia di Valve Proton Experimental, costruito per "
+"Lutris."
 
 #: src/shared/launchers/hgl.vala:66 src/shared/launchers/lutris.vala:61
 msgid "Wine build compiled from the official WineHQ sources."
@@ -123,8 +131,8 @@ msgid ""
 "Custom Proton build for running Windows games, built with the Wine-tkg build "
 "system."
 msgstr ""
-"Build Proton personalizzata per l'esecuzione di giochi Windows, creata con la build di sistema "
-"wine-tkg."
+"Build Proton personalizzata per l'esecuzione di giochi Windows, creata con "
+"la build di sistema wine-tkg."
 
 #: src/shared/launchers/lutris.vala:7
 msgid "Program which allows running Microsoft Windows programs"
@@ -139,34 +147,37 @@ msgid ""
 "Steam compatibility tool for running Windows games with improvements over "
 "Valve's default Proton."
 msgstr ""
-"Strumento di compatibilità con Steam per l'esecuzione di giochi Windows con miglioramenti rispetto a "
-"Proton predefinito di Valve."
+"Strumento di compatibilità con Steam per l'esecuzione di giochi Windows con "
+"miglioramenti rispetto a Proton predefinito di Valve."
 
 #: src/shared/launchers/steam.vala:71
 msgid ""
 "Luxtorpeda provides Linux-native game engines for specific Windows-only "
 "games."
 msgstr ""
-"Luxtorpeda fornisce motori di gioco nativi Linux per specifici per giochi di sistemi "
-"Windows."
+"Luxtorpeda fornisce motori di gioco nativi Linux per specifici per giochi di "
+"sistemi Windows."
 
 #: src/shared/launchers/steam.vala:72
 msgid ""
 "Steam Play compatibility tool to run DOS games using native Linux DOSBox."
 msgstr ""
-"Strumento di compatibilità Steam Play per eseguire giochi DOS utilizzando DOSBox Linux nativo."
+"Strumento di compatibilità Steam Play per eseguire giochi DOS utilizzando "
+"DOSBox Linux nativo."
 
 #: src/shared/launchers/steam.vala:73
 msgid ""
 "Steam Play compatibility tool to run adventure games using native Linux "
 "ScummVM."
 msgstr ""
-"Strumento di compatibilità Steam Play per eseguire giochi di avventura utilizzando Linux nativo "
-"ScummVM."
+"Strumento di compatibilità Steam Play per eseguire giochi di avventura "
+"utilizzando Linux nativo ScummVM."
 
 #: src/shared/launchers/steam.vala:74
 msgid "Custom Proton build for running the Northstar client for Titanfall 2."
-msgstr "Build Proton personalizzata per l'esecuzione del client Northstar per Titanfall 2."
+msgstr ""
+"Build Proton personalizzata per l'esecuzione del client Northstar per "
+"Titanfall 2."
 
 #~ msgid "Preferences"
 #~ msgstr "Preferenze"
